--- a/style.css
+++ b/style.css
@@ -1,15 +1,22 @@
 body {
-  background: #71bcbc;
+  background-image: url("img/Black_background-2.jpg");
   color: blue;
 }
 
 header {
-  background: orange;
+  font-family: 'Lora', serif;
   text-align: center;
+  color: #7e833d;
+  border-bottom: 1px solid #7e833d;
+}
+
+#runningCounter {
+  margin-top: -50px;
+  margin-bottom: 50px;
 }
 
 h1 {
-  font-size: 50px;
+  font-size: 100px;
 }
 
 h2 {
@@ -17,16 +24,21 @@ h2 {
 }
 
 h3 {
-  font-size: 25px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-size: 40px;
+  text-decoration: underline;
 }
 
 p {
+  font-family: 'Scope One', serif;
   margin: 0 auto;
-  font-size: 18px;
-  width: 500px;
+  font-size: 32px;
+  width: 600px;
 }
 
 section {
+  color: #c0c1b2;
   text-align: center;
 }
 
@@ -80,7 +92,7 @@ table {
   font-size: 18px;
   color: white;
   text-align: center;
-  border: 1px solid black;
+  border: 1px solid white;
   vertical-align: middle;
   padding: 3px;
   }
@@ -94,16 +106,16 @@ th {
   width: 40px;
   margin: 5px;
   padding: 3px;
-  border: 1px solid black;
+  border: 1px solid white;
 }
 th:last-child {
   width: 100px;
   margin: 5px;
   padding: 3px;
-  border: 1px solid black;
+  border: 1px solid white;
 }
 
 td {
   padding: 3px;
-  border: 1px solid black;
+  border: 1px solid white;
 }
