--- a/style.css
+++ b/style.css
@@ -117,3 +117,15 @@ td {
   padding: 3px;
   border: 1px solid white;
 }
+
+.chartjs {
+  display: inline-block;
+  width: 500px;
+  height: 300px;
+  float: left;
+}
+
+canvas {
+  width: 50px;
+  height: 50px;
+}
