--- a/style.css
+++ b/style.css
@@ -38,25 +38,45 @@ section {
 }
 
 button {
-margin-top:50px;
-font-size: 40px;
-width: 200px;
-height: 100px;
-border: 3px solid black;
+  background-color: #999;
+  margin-top:50px;
+  font-size: 40px;
+  width: 200px;
+  height: 100px;
+  border: 3px solid black;
+  border-radius: 25px;
 }
 
 button:hover {
-color: green;
-font-size: 40px;
-width: 200px;
-height: 100px;
-border: 3px solid green;
-cursor: pointer;
+  background-color: #999;
+  color: green;
+  font-size: 40px;
+  width: 200px;
+  height: 100px;
+  border: 3px solid green;
+  cursor: pointer;
+  border-radius: 25px;
 }
 
 #runningCounter {
   margin-top: -50px;
   margin-bottom: 50px;
+}
+
+#link {
+  font-family: 'Scope One', serif;
+  margin: 10px auto;
+  font-size: 32px;
+  width: 600px;
+}
+
+#link:hover {
+  font-family: 'Scope One', serif;
+  margin: 10px auto;
+  font-size: 32px;
+  text-shadow: 5px 5px #444;
+  width: 600px;
+  cursor: pointer;
 }
 
 li {
